Annotation pipeline for corpus browser

--- a/sling/nlp/document/BUILD
+++ b/sling/nlp/document/BUILD
@@ -232,6 +232,8 @@ cc_binary(
   name = "corpus-browser",
   srcs = ["corpus-browser.cc"],
   deps = [
+    ":annotator",
+    ":annotator-components",
     ":corpus-app",
     ":document",
     ":document-service",
