Custom phrase structure annotations

--- a/sling/nlp/ner/BUILD
+++ b/sling/nlp/ner/BUILD
@@ -79,8 +79,10 @@ cc_library(
     "//sling/frame:serialization",
     "//sling/nlp/document",
     "//sling/nlp/document:annotator",
+    "//sling/nlp/document:lex",
     "//sling/nlp/kb:facts",
     "//sling/nlp/kb:phrase-table",
+    "//sling/stream:file-input",
     "//sling/util:fingerprint",
     "//sling/util:mutex",
   ],
