--- a/sling/nlp/parser/trainer/BUILD
+++ b/sling/nlp/parser/trainer/BUILD
@@ -11,7 +11,7 @@ cc_library(
     "//sling/frame:serialization",
     "//sling/frame:store",
     "//sling/nlp/document:document",
-    "//sling/nlp/document:document-source",
+    "//sling/nlp/document:document-corpus",
     "//sling/string:strcat",
   ],
 )
@@ -39,7 +39,7 @@ cc_binary(
     "//sling/file:posix",
     "//sling/frame:store",
     "//sling/nlp/document:document",
-    "//sling/nlp/document:document-source",
+    "//sling/nlp/document:document-corpus",
     "//sling/nlp/parser:parser-action",
   ],
 )
