--- a/sling/pyapi/BUILD
+++ b/sling/pyapi/BUILD
@@ -32,7 +32,6 @@ cc_library(
     "pywiki.h",
   ],
   deps = [
-    ":tasks",
     "//sling/base",
     "//sling/file",
     "//sling/file:recordio",
@@ -90,7 +89,7 @@ cc_library(
     "//sling/nlp/embedding:word-embeddings",
     "//sling/nlp/embedding:fact-plausibility",
 
-    "//sling/nlp/parser:parser-trainer",
+    "//sling/nlp/parser:caspar-trainer",
 
     "//sling/nlp/ner:idf",
     "//sling/nlp/ner:labeler",
@@ -113,6 +112,7 @@ cc_binary(
   name = "pysling.so",
   deps = [
     ":pyapi",
+    ":tasks",
     "//sling/base",
     "//sling/file:posix",
   ],
