Parser trainer forward and backward propagation

--- a/sling/myelin/tests/BUILD
+++ b/sling/myelin/tests/BUILD
@@ -78,6 +78,7 @@ cc_binary(
     "//sling/myelin:compiler",
     "//sling/myelin:gradient",
     "//sling/myelin:learning",
+    "//sling/myelin:profile",
     "//sling/nlp/document",
     "//sling/nlp/document:lexical-encoder",
     "//sling/util:mutex",
