--- a/sling/nlp/parser/BUILD
+++ b/sling/nlp/parser/BUILD
@@ -113,6 +113,7 @@ cc_library(
     "//sling/frame:serialization",
     "//sling/frame:store",
     "//sling/myelin:compiler",
+    "//sling/myelin:profile",
     "//sling/nlp/document",
     "//sling/nlp/document:lexical-encoder",
   ],
