RNN stack skeleton

--- a/sling/myelin/tests/BUILD
+++ b/sling/myelin/tests/BUILD
@@ -74,6 +74,7 @@ cc_binary(
     "//sling/file:recordio",
     "//sling/frame:serialization",
     "//sling/frame:store",
+    "//sling/myelin:bilstm",
     "//sling/myelin:builder",
     "//sling/myelin:compiler",
     "//sling/myelin:gradient",
