--- a/sling/nlp/parser/BUILD
+++ b/sling/nlp/parser/BUILD
@@ -64,8 +64,8 @@ cc_library(
     ":roles",
     ":trace",
     "//sling/base",
+    "//sling/myelin:bilstm",
     "//sling/myelin:compute",
-    "//sling/myelin:rnn",
   ],
 )
 
