--- a/sling/nlp/parser/tools/BUILD
+++ b/sling/nlp/parser/tools/BUILD
@@ -15,8 +15,9 @@ cc_binary(
     "//sling/nlp/document:document-tokenizer",
     "//sling/nlp/document:lex",
     "//sling/nlp/parser",
-    "//sling/nlp/parser:multiclass-delegate",
     "//sling/nlp/parser:frame-evaluation",
+    "//sling/nlp/parser:lexrnn-encoder",
+    "//sling/nlp/parser:multiclass-delegate",
     "//sling/string:printf",
   ],
 )
