Parser decoder interface

--- a/sling/myelin/tests/BUILD
+++ b/sling/myelin/tests/BUILD
@@ -79,8 +79,9 @@ cc_binary(
     "//sling/myelin:gradient",
     "//sling/myelin:learning",
     "//sling/myelin:profile",
+    "//sling/myelin:rnn",
     "//sling/nlp/document",
-    "//sling/nlp/document:lexical-encoder",
+    "//sling/nlp/document:lexical-features",
     "//sling/util:mutex",
     "//sling/util:thread",
   ],
