--- a/sling/nlp/document/BUILD
+++ b/sling/nlp/document/BUILD
@@ -169,9 +169,9 @@ cc_library(
 )
 
 cc_library(
-  name = "lexical-encoder",
-  srcs = ["lexical-encoder.cc"],
-  hdrs = ["lexical-encoder.h"],
+  name = "lexical-features",
+  srcs = ["lexical-features.cc"],
+  hdrs = ["lexical-features.h"],
   deps = [
     ":document",
     ":features",
