--- a/sling/pyapi/BUILD
+++ b/sling/pyapi/BUILD
@@ -54,9 +54,8 @@ cc_library(
     "//sling/nlp/kb:facts",
     "//sling/nlp/kb:phrase-table",
     "//sling/nlp/parser",
+    "//sling/nlp/parser:components",
     "//sling/nlp/parser:frame-evaluation",
-    "//sling/nlp/parser:lexrnn-encoder",
-    "//sling/nlp/parser:multiclass-delegate",
     "//sling/nlp/wiki:wikidata-converter",
     "//sling/task:dashboard",
     "//sling/task:job",
