Split array kernels into separate modules

--- a/sling/myelin/kernel/BUILD
+++ b/sling/myelin/kernel/BUILD
@@ -3,11 +3,15 @@ package(default_visibility = ["//visibility:public"])
 cc_library(
   name = "generic",
   srcs = [
+    "argmax.cc",
     "array.cc",
+    "concat.cc",
+    "gather.cc",
     "generic.cc",
-    "generic-math.cc",
     "generic-matmul.cc",
     "generic-operators.cc",
+    "reduce.cc",
+    "transpose.cc",
   ],
   hdrs = ["generic.h"],
   deps = [
@@ -49,7 +53,6 @@ cc_library(
   name = "avx",
   srcs = [
     "avx.cc",
-    "avx-math.cc",
     "avx-matmul.cc",
     "avx-operators.cc",
     "simd-matmul.cc",
