--- a/sling/util/BUILD
+++ b/sling/util/BUILD
@@ -46,6 +46,11 @@ cc_library(
 )
 
 cc_library(
+  name = "arena",
+  hdrs = ["arena.h"],
+)
+
+cc_library(
   name = "unicode",
   hdrs = [
     "unicode.h",
