--- a/sling/util/BUILD
+++ b/sling/util/BUILD
@@ -51,6 +51,11 @@ cc_library(
 )
 
 cc_library(
+  name = "asset",
+  hdrs = ["asset.h"],
+)
+
+cc_library(
   name = "unicode",
   hdrs = [
     "unicode.h",
