--- a/sling/myelin/BUILD
+++ b/sling/myelin/BUILD
@@ -130,6 +130,18 @@ cc_library(
 )
 
 cc_library(
+  name = "crf",
+  srcs = ["crf.cc"],
+  hdrs = ["crf.h"],
+  deps = [
+    ":builder",
+    ":compute",
+    ":flow",
+    ":gradient",
+  ],
+)
+
+cc_library(
   name = "elf-linker",
   srcs = ["elf-linker.cc"],
   hdrs = ["elf-linker.h"],
