Moved buffer to base

--- a/sling/base/BUILD
+++ b/sling/base/BUILD
@@ -3,6 +3,7 @@ package(default_visibility = ["//visibility:public"])
 cc_library(
   name = "base",
   srcs = [
+    "buffer.cc",
     "flags.cc",
     "init.cc",
     "logging.cc",
@@ -10,6 +11,7 @@ cc_library(
   ],
   hdrs = [
     "bitcast.h",
+    "buffer.h",
     "flags.h",
     "init.h",
     "logging.h",
