Composite functions in Myelin

--- a/sling/myelin/kernel/BUILD
+++ b/sling/myelin/kernel/BUILD
@@ -17,6 +17,7 @@ cc_library(
   deps = [
     "//sling/base",
     "//sling/myelin:compute",
+    "//sling/myelin:builder",
     "//sling/myelin:simd-assembler",
   ],
 )
