Database reader and writer tasks

--- a/sling/pyapi/BUILD
+++ b/sling/pyapi/BUILD
@@ -113,6 +113,8 @@ cc_library(
     "//sling/task:text-file-writer",
     "//sling/task:text-map-reader",
     "//sling/task:text-map-writer",
+    "//sling/task:database-reader",
+    "//sling/task:database-writer",
     "//sling/task:pipe-reader",
     "//sling/task:workers",
   ],
