Database support for codex tool

--- a/tools/BUILD
+++ b/tools/BUILD
@@ -27,6 +27,7 @@ cc_binary(
   srcs = ["codex.cc"],
   deps = [
     "//sling/base",
+    "//sling/db:dbclient",
     "//sling/file",
     "//sling/file:recordio",
     "//sling/file:posix",
