Order properties in knowledge base browser

--- a/sling/nlp/kb/BUILD
+++ b/sling/nlp/kb/BUILD
@@ -141,6 +141,7 @@ cc_library(
     "//sling/http:http-server",
     "//sling/http:static-content",
     "//sling/http:web-service",
+    "//sling/util:sortmap",
   ],
 )
 
