Knowledge base reconciliation

--- a/sling/pyapi/BUILD
+++ b/sling/pyapi/BUILD
@@ -89,9 +89,11 @@ cc_library(
     "//sling/nlp/document:vocabulary-builder",
 
     "//sling/nlp/kb:fact-lexicon",
+    "//sling/nlp/kb:popularity",
+    "//sling/nlp/kb:xref-builder",
+    "//sling/nlp/kb:reconciler",
     "//sling/nlp/kb:name-table-builder",
     "//sling/nlp/kb:phrase-table-builder",
-    "//sling/nlp/kb:xref-builder",
 
     "//sling/nlp/embedding:fact-embeddings",
     "//sling/nlp/embedding:word-embeddings",
