Python API for document analyzer

--- a/sling/pyapi/BUILD
+++ b/sling/pyapi/BUILD
@@ -48,6 +48,7 @@ cc_library(
     "//sling/myelin:gradient",
     "//sling/myelin:profile",
     "//sling/nlp/document",
+    "//sling/nlp/document:annotator",
     "//sling/nlp/document:document-tokenizer",
     "//sling/nlp/document:lex",
     "//sling/nlp/document:phrase-tokenizer",
