--- a/sling/pyapi/BUILD
+++ b/sling/pyapi/BUILD
@@ -54,7 +54,7 @@ cc_library(
     "//sling/nlp/kb:facts",
     "//sling/nlp/kb:phrase-table",
     "//sling/nlp/parser",
-    "//sling/nlp/parser:multiclass-delegate",
+    "//sling/nlp/parser:components",
     "//sling/nlp/parser:frame-evaluation",
     "//sling/nlp/wiki:wikidata-converter",
     "//sling/task:dashboard",
@@ -91,7 +91,7 @@ cc_library(
     "//sling/nlp/embedding:word-embeddings",
     "//sling/nlp/embedding:fact-plausibility",
 
-    "//sling/nlp/parser:caspar-trainer",
+    "//sling/nlp/parser:parser-trainer",
 
     "//sling/nlp/silver:idf",
     "//sling/nlp/silver:annotators",
